Closed Bug 947963 Opened 11 years ago Closed 11 years ago

Invalidate compilation after OOM in CodeGenerator::link

Categories

(Core :: JavaScript Engine: JIT, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla29

People

(Reporter: bhackett1024, Assigned: bhackett1024)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Attached patch patchSplinter Review
If we don't invalidate the compilation after failures at these spots, we can get into a later state where the compiler output thinks it is valid even though Ion compilation for the script is disabled.
Attachment #8344680 - Flags: review?(jdemooij)
Attachment #8344680 - Flags: review?(jdemooij) → review+
Assignee: nobody → bhackett1024
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla29
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: