Bug 947963 - Invalidate compilation after OOM in CodeGenerator::link, r=jandem.